[gd_scene load_steps=7 format=3 uid="uid://dnjtjheiphs52"]

[ext_resource type="Script" path="res://number.gd" id="1_37d70"]
[ext_resource type="PackedScene" uid="uid://cvwcjl7kpiih6" path="res://operator.tscn" id="1_deks1"]
[ext_resource type="Script" path="res://Area2D.gd" id="3_ht520"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xq2vc"]
radius = 47.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bugim"]
size = Vector2(240, 240)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_2l5aa"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:scale")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:modulate")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:num")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:monitoring")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:monitorable")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Number" type="Area2D"]
script = ExtResource("1_37d70")

[node name="operator" parent="." instance=ExtResource("1_deks1")]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(60, 60)

[node name="operator2" parent="." instance=ExtResource("1_deks1")]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(180, 60)
operator = "‒"
opColor = Color(0.172549, 0.635294, 0.384314, 1)

[node name="operator3" parent="." instance=ExtResource("1_deks1")]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(60, 180)
operator = "×"
opColor = Color(0.843137, 0.333333, 0.835294, 1)

[node name="operator4" parent="." instance=ExtResource("1_deks1")]
modulate = Color(1, 1, 1, 0.6)
position = Vector2(180, 180)
operator = "÷"
opColor = Color(0.807843, 0.619608, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
z_index = 10
monitorable = false
script = ExtResource("3_ht520")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(120, 120)
shape = SubResource("CircleShape2D_xq2vc")

[node name="Label" type="Label" parent="Area2D"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 240.0
offset_bottom = 240.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(120, 120)
shape = SubResource("RectangleShape2D_bugim")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_2l5aa")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
